# plastic_linker

./: .gitignore  CMakeLists.txt
ELF/: Driver.cpp  Driver.h  InputFile.cpp  InputFile.h  LLVM.h  Main.cpp  Memory.cpp  Memory.h  Symbol.h
include/: InputFile.h  Symbol.h
src/: InputFile.cpp  Main.cpp
